# blog

./: .gitignore  README.md  go.mod  hugo.toml  netlify.toml  pyproject.toml
assets/css/: custom.css
blog/: build.py  cli.py  config.py  converter.py  css_generator.py  dev_server.py  feed_generator.py  page_builder.py  page_writer.py  post_builder.py  post_writer.py  sitemap_generator.py  template_handler.py
blog/posts/: 3d-printing-progress.md  a-case-for-not-giving-goals-deadlines.md  anno-type-check-python.md  arithmetic_parser.md  auto-complete-js.md  bad-memory-good-engineering-practice.md  bare_bones_x86_kernel.md  booting-a-custom-linux-kernel.md  conviction-prelude-to-learning.md  crusher_lang.md  good-enough-today-is-good-enough.md  guide-to-building-and-installing-the-linux-kernel.md  hand-rolling-my-own-static-site-generator.md  intro-to-yaml.md  keep-configs-in-sync.md  more-marathons-less-sprints.md  multi-environment-configuration-files-management.md  musings-about-time-management.md  my-first-foray-into-3d-printing.md  mysql-locks-intro.md  photographs-23-03-25.md  photographs-30-12-24.md  photographs-30-12-24.md.disabled  read-this-if-you-want-to-take-great-photographs.md  rtfm-is-not-a-rude-putdown.md  run-command-interval.md  smarter-note-taking.md  sql-insert-into-select-overview.md  the-elements-of-style.md  understanding-exposure.md
blog/templates/: base.html  index.html  post.html  tag.html
config/_default/: config.toml  languages.en.toml  menus.en.toml  params.toml  taxonomies.toml
content/: _index.md  about.md
public/: 404.html  index.html  index.xml  sitemap.xml
tests/: test_config.py  test_converter.py  test_feed_generator.py  test_page_builder.py  test_page_writer.py  test_sitemap_generator.py
(+59 files in other folders)
