[project]
name = "blog"
version = "2.0.0"
description = "My personal blog"
authors = [
    {name = "Oye Oloyede",email = "oyekunlemac@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
